syntax = "proto3";

import "GameDataService/Models/Common/enums.proto";

option csharp_namespace = "GameData.SearchParams.Gen";

message FactionsSearchParams {
}

message SubfactionsSearchParams {
    optional int32 faction_id = 1;
}

message HeroesSearchParams {
}

message HeroClassesSearchParams {
}

message UnitsSearchParams {
}

message ArtefactsSearchParams {
}

message ArtefactSetsSearchParams {
}

message ArtefactSetBonusesSearchParams {
}

message CompetenciesSearchParams {
    optional int32 subfaction_id = 1;
}

message SkillsSearchParams {
    optional int32 subfaction_id = 1;
}

message SpellsSearchParams {
    optional int32 required_skill_id = 1;
}

message AbilitiesSearchParams {
}

message EffectsSearchParams {
    optional EffectType effect_type = 1;
}