syntax = "proto3";

import "google/protobuf/empty.proto";
import "GamesService/Models/entities.proto";
import "GamesService/Models/Common/search_params.proto";
import "GamesService/Models/Common/convert_params.proto";

option csharp_namespace = "Games.Gen";

service GamesService {
    rpc Get(GetGameRequest) returns (Game);
    rpc GetByFilter(GetGamesRequest) returns (GetGamesResponse);
    rpc CreateOrUpdate(Game) returns (google.protobuf.Empty);
    rpc Delete(DeleteGameRequest) returns (google.protobuf.Empty);
}

message GetGameRequest {
    string id = 1;
    optional GamesConvertParams games_convert_params = 2;
}

message GetGamesRequest {
    GamesSearchParams games_search_params = 1;
    optional GamesConvertParams games_convert_params = 2;
}

message GetGamesResponse {
    repeated Game games = 1;
}

message DeleteGameRequest {
    string id = 1;
}